@@ -2,7 +2,6 @@ package git.niklogik.core.fire;
 
 
 import git.niklogik.core.config.lib.Config;
-import git.niklogik.core.exceptions.FireLeaderException;
 import git.niklogik.core.fire.lib.Agent;
 import git.niklogik.core.fire.lib.AgentState;
 import git.niklogik.core.fire.lib.AgentStatus;
@@ -18,7 +17,6 @@ import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Slf4j
 public final class FireUtils {
@@ -59,47 +57,38 @@ public final class FireUtils {
     }
 
     public static Agent getHeadAgent(Map<UUID, Agent> agents) {
-        List<Agent> agentList = agents.values().stream().filter(Agent::isHead).collect(Collectors.toList());
-        try {
-            if (agentList.size() > 1) {
-                throw new FireLeaderException(FireLeaderException.Code.TOO_MANY);
-            }
-            if (agentList.isEmpty()) {
-                throw new FireLeaderException(FireLeaderException.Code.TOO_MANY);
-            }
-        } catch (IllegalArgumentException ex) {
-            log.warn("Agent map have {} agents. It will be forcibly fixed.", agentList.size());
+        List<Agent> leaders = agents.values().stream().filter(Agent::isHead).toList();
+
+        if (leaders.size() > 1) {
+            log.debug("Fire contains more than one head agent.");
+            var newLeader = leaders.getFirst();
+            newLeader.setHead(true);
+
+            leaders.stream()
+                   .filter(agent -> agent.getId().equals(newLeader.getId()))
+                   .forEach(agent -> agent.setHead(false));
+
+            return newLeader;
+        } else if (leaders.isEmpty()) {
+            log.debug("No head agent found.");
+            var newLeader = agents.values().iterator().next();
+            newLeader.setHead(true);
+            return newLeader;
         }
 
-        if (agentList.size() > 1) {
-            for (int i = 0; i < agentList.size(); i++) {
-                if (i == 0) {
-                    continue;
-                } else {
-                    agentList.get(i).setHead(false);
-                }
-            }
-        } else if (agentList.isEmpty()) {
-            Iterator<Agent> iterator = agents.values().iterator();
-            Agent next = iterator.next();
-            next.setHead(true);
-            agentList.add(next);
-        }
-        return agentList.getFirst();
+        return leaders.getFirst();
     }
 
     public static Polygon getPolygonFromAgentMap(AgentMap map, GeometryFactory factory) {
         Iterator<Agent> iterator = map.iterator();
         LinkedList<Coordinate> coordinates = new LinkedList<>();
-        Agent head = iterator.next();
-        coordinates.add(new Coordinate(head.getCoordinate()));
 
-        while (iterator.hasNext()) {
+        do {
             Agent next = iterator.next();
             coordinates.add(new Coordinate(next.getCoordinate()));
-        }
-        coordinates.add(new Coordinate(head.getCoordinate()));
-        return factory.createPolygon(coordinates.toArray(new Coordinate[0]));
+        } while (iterator.hasNext());
+
+        return factory.createPolygon(coordinates.toArray(Coordinate[]::new));
     }
 
     public static LinkedList<AgentState> getListOfStates(AgentMap agents, int iterNum) {
